monitoring-v3/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.monitoring.stefanmuraru.com
spec:
  parentRefs:
    - name: private
      namespace: gateway-system
      sectionName: https
  hostnames:
    - prometheus.monitoring.stefanmuraru.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus
          port: 9090
